duilib 修改post build脚本

--- a/duilib/CMakeLists.txt
+++ b/duilib/CMakeLists.txt
@@ -19,8 +19,8 @@ message(STATUS," CMake project files for duilib")
 add_subdirectory(duilib)
 add_subdirectory(360SafeDemo)
 #add_subdirectory(FlashDemo)
-#add_subdirectory(GameDemo)
-#add_subdirectory(ListDemo)
+add_subdirectory(GameDemo)
+add_subdirectory(ListDemo)
 # add_subdirectory(MenuDemo) the sources in this project has error
-#add_subdirectory(QQDemo)
-#add_subdirectory(RichListDemo)
+add_subdirectory(QQDemo)
+add_subdirectory(RichListDemo)
