--- a/duilib/GameDemo/CMakeLists.txt
+++ b/duilib/GameDemo/CMakeLists.txt
@@ -11,6 +11,8 @@ add_dependencies(GameDemo duilib)
 target_link_libraries(GameDemo duilib)
 set_target_properties(GameDemo PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
 
-add_custom_command(TARGET GameDemo POST_BUILD
+add_custom_command(TARGET GameDemo POST_BUILD COMMAND xcopy /EIY \"${PROJECT_SOURCE_DIR}/bin/skin/GameRes\" \"${PROJECT_BINARY_DIR}/bin/Debug/skin/GameRes\" COMMAND xcopy /EIY \"${PROJECT_SOURCE_DIR}/bin/skin/GameRes\" \"${PROJECT_BINARY_DIR}/bin/Release/skin/GameRes\" )
+
+#add_custom_command(TARGET GameDemo POST_BUILD
 #  COMMAND ${CMAKE_COMMAND} -E copy_if_different
 #  ${PROJECT_BINARY_DIR}/bin/GameDemo.exe ${PROJECT_SOURCE_DIR}/bin/GameDemo.exe)
