--- a/duilib/GameDemo/CMakeLists.txt
+++ b/duilib/GameDemo/CMakeLists.txt
@@ -6,7 +6,10 @@ set(source_files GameDemo.cpp MiniDumper.cpp stdAfx.cpp)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
-add_executable(GameDemo ${source_files})
+
+file(GLOB_RECURSE  ALL_H_FILE *.h )
+add_executable(GameDemo ${source_files} ${ALL_H_FILE})
+
 add_dependencies(GameDemo duilib)
 target_link_libraries(GameDemo duilib)
 set_target_properties(GameDemo PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
