duilib post build， 复制文件目录时，检查目录是否存在

--- a/duilib/RichListDemo/CMakeLists.txt
+++ b/duilib/RichListDemo/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(RichListDemo ${SRC_LIST} RichListDemo.rc ${ALL_H_FILE})
 set_target_properties(RichListDemo PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")
 target_link_libraries(RichListDemo duilib)
 
-add_custom_command(TARGET RichListDemo POST_BUILD COMMAND xcopy /EIY \"${PROJECT_SOURCE_DIR}/bin/skin/RichListRes\" \"${PROJECT_BINARY_DIR}/bin/Debug/skin/RichListRes\" COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_SOURCE_DIR}/bin/skin/RichListRes.zip ${PROJECT_BINARY_DIR}/bin/Release/skin/RichListRes.zip )
+add_custom_command(TARGET RichListDemo POST_BUILD COMMAND if not exist \"${PROJECT_BINARY_DIR}/bin/Debug/skin/RichListRes\" xcopy /EIY \"${PROJECT_SOURCE_DIR}/bin/skin/RichListRes\" \"${PROJECT_BINARY_DIR}/bin/Debug/skin/RichListRes\" COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_SOURCE_DIR}/bin/skin/RichListRes.zip ${PROJECT_BINARY_DIR}/bin/Release/skin/RichListRes.zip )
 
 #add_custom_command(TARGET RichListDemo POST_BUILD
 #  COMMAND ${CMAKE_COMMAND} -E copy_if_different
