duilib - 放开menu project

--- a/duilib/CMakeLists.txt
+++ b/duilib/CMakeLists.txt
@@ -40,3 +40,4 @@ add_subdirectory(ListDemo)
 # add_subdirectory(MenuDemo) the sources in this project has error
 add_subdirectory(QQDemo)
 add_subdirectory(RichListDemo)
+add_subdirectory(MenuDemo)
